# vnu2f_qlddk68

./: .gitignore  README.md  TESTING.md  __init__.py  docker-compose.langfuse.yml  metadata.txt  requirements-qgis.txt  vnu2f_qlddk68.py
cadastral_tools/: __init__.py
config/: land_types.json  xml_field_mapping.json
data/: schema.sql  schema_postgis.sql
i18n/: en.ts
modules/: __init__.py  plugin_actions.py  webgis_browser_mixin.py  webgis_launcher.py
templates/: Khung LVT2601_print_27Apr2026_EN.qpt  Khung LVT2601_print_27Apr2026_VN.qpt  Khung_Slide.qpt  Khung_Slide_EN.qpt  TT08_HTSDD_commune.qpt  TT08_HTSDD_district.qpt  TT08_HTSDD_province.qpt  TT08_HTSDD_region_country.qpt
tests/: benchmarks_summary.json  conftest.py  qgis_console_test.py  tab_stress_summary.json  test_agy_worker.py  test_architecture_dependencies.py  test_cadastral_importer.py  test_cadastral_importer_di.py  test_cadastral_tools_di.py  test_crs_converter.py  test_crs_converter_di.py  test_dxf_reader_import.py  test_error_reporter.py  test_excel_writer_logic.py  test_geometry_audit.py  test_map_layout_auto.py  test_mapjs_content.py  test_report_summary.json  test_smoke.py  test_step3_legal_audit.py  test_symbology_multiselect.py  test_tcvn3_decoder.py  test_tunnel_manager.py  test_tunnel_manager_contracts.py  test_ui_stress.py  (+10 more)
tools/cad_reader_rs/: Cargo.toml  RUST_MAINTENANCE.md
tools/cad_reader_rs/src/: dgn.rs  gtp.rs  main.rs  pol.rs  topology.rs
tools/libraries/topology-tools/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
tools/libraries/topology-tools/scripts/: run-tests.ps1  run-tests.sh
tools/libraries/topology-tools/src/topology_tools/: __init__.py  geometry_validator.py  line_cleaner.py  polygonizer.py
tools/libraries/topology-tools/tests/: conftest.py  test_geometry_validator.py  test_line_cleaner.py  test_polygonizer.py
tools/libraries/vn_mapfont_converter/: README.md  pyproject.toml
tools/libraries/vn_mapfont_converter/vn_mapfont_converter/: __init__.py  font_utils.py
(+259 files in other folders)
