[package]
name = "cad_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
acadrust = { version = "0.3.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cfb = "0.9"
flate2 = "1.0"
geo = { version = "0.28", features = ["use-serde"] }
rstar = "0.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true


