[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-mapfont-converter"
version = "1.0.0"
authors = [
    { name = "vnu2f", email = "info@vnu2f.org" }
]
description = "A standalone Python package for converting Vietnamese legacy map font encodings (TCVN3, VNI) to Unicode."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vn_mapfont_converter*"]
